welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:3: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
var couleuravant: Boolean
    ^SlugTracking:6: error: not found: value green
if(getCouleurSol()==green)
                    ^SlugTracking:6: error: type mismatch;
 found   : Unit
 required: Boolean
if(getCouleurSol()==green)
^