welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
var couleuravant: Boolean
avance()

if(getCouleurSol()==green)
return couleuravant 
    // Write your code here
}        
